fixing menu spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3077,7 +3077,7 @@
 				border-left: solid 1px rgba(160, 160, 160, 0.3);
 				line-height: 1;
 				margin-left: 1em;
-				padding-left: 1em;
+				padding-left: 2em;
 			}
 
 				#header .links ul li:first-child {
